Fixed configuration of compose